crates/htui/tests/snapshots/chat__replay_streamed_turn.snap
---
source: crates/htui/tests/chat.rs
expression: replayed
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Chat
┌ Chat ────────────────────────────────────────────────────────────────────────────────────────────┐
│replay · step …<step> · 6 rows · read-only · Esc leave                                          │
│you  what is in main.rs                                                                           │
│thought  I should read the file first (t to unfold)                                               │
│Reading it now.                                                                                   │
│read src/main.rs  [ok]                                                                            │
│It is empty.                                                                                      │
│— turn ended (end_turn) —                                                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│Esc leave replay · t thoughts · j/k scroll                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
